--- a/BlockTechMVC/BlockTechMVC/Views/CriptomoedasHoje/Create.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/CriptomoedasHoje/Create.cshtml
@@ -18,11 +18,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="Criptomoeda.Simbolo" class="control-label"></label>
-                <select asp-for="Criptomoeda.Simbolo" class="form-control" asp-items="ViewBag.Criptomoeda.Simbolo"></select>
+                <select asp-for="Criptomoeda.Simbolo" class="form-control" asp-items="ViewBag.Criptomoeda"></select>
             </div>
             <div class="form-group">
                 <label asp-for="Criptomoeda.Nome" class="control-label"></label>
-                <select asp-for="Criptomoeda.Nome" class="form-control" asp-items="ViewBag.Criptomoeda.Nome"></select>
+                <select asp-for="Criptomoeda.Nome" class="form-control" asp-items="ViewBag.Criptomoeda">
+                </select>
             </div>
             <div class="form-group">
                 <label asp-for="Valor" class="control-label"></label>
