--- a/BlockTechMVC/BlockTechMVC/Views/CriptomoedasHoje/Create.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/CriptomoedasHoje/Create.cshtml
@@ -22,7 +22,8 @@
             </div>
             <div class="form-group">
                 <label asp-for="Criptomoeda.Nome" class="control-label"></label>
-                <select asp-for="Criptomoeda.Nome" class="form-control" asp-items="ViewBag.Criptomoeda">
+                <select asp-for="Criptomoeda.Nome" class="form-control" asp-items="ViewBag.CriptomoedaNome">
+                        
                 </select>
             </div>
             <div class="form-group">
