--- a/BlockTechMVC/BlockTechMVC/Areas/Identity/Pages/Account/Register.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Areas/Identity/Pages/Account/Register.cshtml
@@ -59,6 +59,11 @@
                 <span asp-validation-for="Input.Telefone" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Input.UserName"></label>
+                <input asp-for="Input.UserName" class="form-control" />
+                <span asp-validation-for="Input.UserName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Input.Password"></label>
                 <input asp-for="Input.Password" class="form-control" />
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
