--- a/BlockTechMVC/BlockTechMVC/Views/CriptomoedasHoje/Create.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/CriptomoedasHoje/Create.cshtml
@@ -22,10 +22,14 @@
             </div>
             <div class="form-group">
                 <label asp-for="Criptomoeda.Nome" class="control-label"></label>
-                <select asp-for="Criptomoeda.Nome" class="form-control" asp-items="ViewBag.CriptomoedaId">
-                        
-                </select>
+                <select asp-for="Criptomoeda.Nome" class="form-control" asp-items="ViewBag.CriptomoedaId"></select>
             </div>
+
+            @*<div class="form-group">
+                <label asp-for="CriptomoedaId" class="control-label"></label>
+                <select asp-for="CriptomoedaId" class="form-control" asp-items="ViewBag.CriptomoedaId"></select>
+            </div>*@
+
             <div class="form-group">
                 <label asp-for="Valor" class="control-label"></label>
                 <input asp-for="Valor" class="form-control" />
