--- a/BlockTechMVC/BlockTechMVC/Views/CriptomoedasHoje/Create.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/CriptomoedasHoje/Create.cshtml
@@ -27,7 +27,7 @@
 
             @*<div class="form-group">
                 <label asp-for="CriptomoedaId" class="control-label"></label>
-                <select asp-for="CriptomoedaId" class="form-control" asp-items="ViewBag.CriptomoedaId"></select>
+                <select asp-for="CriptomoedaId" class="form-control" asp-items="ViewBag.IDCriptomoeda"></select>
             </div>*@
 
             <div class="form-group">
