--- a/BlockTechMVC/BlockTechMVC/Views/CriptomoedasHoje/Edit.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/CriptomoedasHoje/Edit.cshtml
@@ -24,7 +24,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Criptomoeda.Nome" class="control-label"></label>
-                <select asp-for="Criptomoeda.Nome" class="form-control" asp-items="ViewBag.CriptomoedaId"></select>
+                <select asp-for="Criptomoeda.Nome" class="form-control" asp-items="ViewBag.CriptomoedaNome"></select>
                 <span asp-validation-for="Criptomoeda.Nome" class="text-danger"></span>
             </div>
             <div class="form-group">
