--- a/BlockTechMVC/BlockTechMVC/Views/Criptomoedas/Index.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Criptomoedas/Index.cshtml
@@ -19,40 +19,49 @@
     </p>
 </form>
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Nome)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Simbolo)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Cadastro)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
+<div class="table-responsive">
+    <table class="table table-hover">
+        <caption>Lista de Criptomoedas</caption> @*acessibilidade*@
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Nome)
+                </th>
+                <th></th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Simbolo)
+                </th>
+                <th></th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Cadastro)
+                </th>
+                <th></th>
+                <th style="white-space: nowrap"></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
             <tr>
                 <td>
                     @Html.DisplayFor(modelItem => item.Nome)
                 </td>
+                <td></td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Simbolo)
                 </td>
+                <td></td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Cadastro)
                 </td>
-                <td>
+                <td></td>
+                <td style="white-space: nowrap">
                     <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-dark">Editar</a>
                     <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-dark">Detalhes</a>
                     <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-dark">Deletar</a>
                 </td>
             </tr>
-        }
-    </tbody>
-</table>
+            }
+        </tbody>
+    </table>
+</div>
