--- a/BlockTechMVC/BlockTechMVC/Views/ContaClientes/Index.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/ContaClientes/Index.cshtml
@@ -35,9 +35,15 @@
                 @Html.DisplayFor(modelItem => item.NumeroConta)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                @if (User.IsInRole("Administrador"))
+                {
+                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-dark">Editar</a>
+                }
+                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-dark">Detalhes</a>
+                @if (User.IsInRole("Administrador"))
+                {
+                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-dark">Deletar</a>
+                }
             </td>
         </tr>
 }
