--- a/BlockTechMVC/BlockTechMVC/Views/Criptomoedas/Index.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Criptomoedas/Index.cshtml
@@ -6,10 +6,12 @@
 
 <h1>@ViewData["Title"]</h1>
 
+@if (User.IsInRole("Administrador"))
+{
 <p>
     <a asp-action="Create" class="btn btn-light">Adicionar</a>
 </p>
-
+}
 <br />
 
 <form asp-controller="Criptomoedas" asp-action="Index" method="get">
@@ -42,25 +44,31 @@
         <tbody>
             @foreach (var item in Model)
             {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Nome)
-                </td>
-                <td></td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Simbolo)
-                </td>
-                <td></td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Cadastro)
-                </td>
-                <td></td>
-                <td style="white-space: nowrap">
-                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-dark">Editar</a>
-                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-dark">Detalhes</a>
-                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-dark">Deletar</a>
-                </td>
-            </tr>
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Nome)
+                    </td>
+                    <td></td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Simbolo)
+                    </td>
+                    <td></td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Cadastro)
+                    </td>
+                    <td></td>
+                    <td style="white-space: nowrap">
+                        @if (User.IsInRole("Administrador"))
+                        {
+                            <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-dark">Editar</a>
+                        }
+                        <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-dark">Detalhes</a>
+                        @if (User.IsInRole("Administrador"))
+                        {
+                            <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-dark">Deletar</a>
+                        }
+                    </td>
+                </tr>
             }
         </tbody>
     </table>
