--- a/BlockTechMVC/BlockTechMVC/Views/Saldos/Index.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Saldos/Index.cshtml
@@ -38,9 +38,15 @@
                 Html.DisplayFor(modelItem => item.quantidadeCripo)
             </td>-->
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-dark">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-dark">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-dark">Delete</a>
+                @if (User.IsInRole("Administrador"))
+                {
+                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-dark">Editar</a>
+                }
+                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-dark">Detalhes</a>
+                @if (User.IsInRole("Administrador"))
+                {
+                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-dark">Deletar</a>
+                }
             </td>
         </tr>
 }
