--- a/BlockTechMVC/BlockTechMVC/Views/Shared/_Layout.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Shared/_Layout.cshtml
@@ -26,13 +26,25 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">Início</a>
                         </li>
-                        <li class="nav-item">
-                            @*APENAS PARA CADASDTRO DE NOVAS CRIPTOMOEDAS - ADM*@
-                            <a class="nav-link text-white" asp-area="" asp-controller="Criptomoedas" asp-action="Index">Criptomoedas</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="CriptomoedasHoje" asp-action="Index">Tempo Real</a>
-                        </li>
+                        @if (User.IsInRole("Admin"))
+                        {
+                            <li class="nav-item">
+                                @*APENAS PARA CADASDTRO DE NOVAS CRIPTOMOEDAS - ADM*@
+                                <a class="nav-link text-white" asp-area="" asp-controller="Criptomoedas" asp-action="Index">Criptomoedas</a>
+                            </li>
+                        }
+                        @if (User.IsInRole("Admin"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-white" asp-area="" asp-controller="CriptomoedasHoje" asp-action="Index">Tempo Real</a>
+                            </li>
+                        }
+                        @if (!User.IsInRole("Admin"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-white" asp-area="" asp-controller="CriptomoedasHoje" asp-action="Index">Criptomoedas</a>
+                            </li>
+                        }
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Transacoes" asp-action="Index">Transações</a>
                         </li>
